...
      />

      <Tab.Screen
        name="Loans"
        component={FindLoansScreen}
        options={{
          tabBarLabel: "Find Loans",
          tabBarIcon: ({ focused, color, size }) => (
            <BorrowerTabIcon
              route="Loans"
              focused={focused}
              color={color}
              size={size}
...
